[tool.poetry]
name = "continuous-k-nearest-neighbors"
version = "0.1.0"
description = "Naive implementation of the paper \"Alternative Solutions for Continuous K Nearest Neighbor Queries in Spatial Network Databases.\""
authors = ["Raimi Solorzano <raimi.solorzano@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7.1"
Shapely = "1.7.1"
matplotlib = "3.3.4"
osmnx = "1.0.1"
networkx = "2.5"
pandas = "1.2.2"
geopandas = "0.8.2"
numpy = "1.20.1"
scikit-learn = "0.24.1"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"
jupyterlab = "^3.0.7"
jupyterlab-code-formatter = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
